Creating complete login screen + register screen + adding Map to locate the city in the city

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <!-- L'API key doit être ici -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCVPnV_5HRBLvmhvl1R0D_PrTXzp96ssnY"/>
+            android:value="@string/google_maps_key"/>
 
         <activity
             android:name=".MainActivity"
