--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "firebase": "^12.8.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-zoom-pan-pinch": "^3.7.0",
+    "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
